# KRNCApps

./: .gitignore  README.md
Bullseye/: .gitignore  spotify_playlister.pyw
UniversalSongBarnManager/: README.md  UniversalSongBarn.py  UniversalSongBarnManager.lnk  __main__.py  app.py  app.pyw  buildapp.bat  common.py  compile.bat  install.py  main.py  main.pyw  pyproject.toml  requirements.txt  setup.py
UniversalSongBarnManager/1) Legacy App/: README.md  UniversalSongBarn.py  tkinterroutines.py
UniversalSongBarnManager/1) Legacy App/lib/: tkinterroutines.py
UniversalSongBarnManager/1) Legacy App/lib/tkintertable/: Tables.py
UniversalSongBarnManager/Filters/: Normalize.filt  StandardCar.filt
UniversalSongBarnManager/KrncUsbManager/: __init__.py  __main__.py  app.py  common.py  ffmpeg_filter.py  images.py  windowsutil.py
UniversalSongBarnManager/KrncUsbManager/filters/: __init__.py  standard.py
UniversalSongBarnManager/USBManager/: __main__.py  app.py  common.py  images.py  linuxutil.py
UniversalSongBarnManager/compiled/main/: pvectorc.cp38-win_amd64.pyd
UniversalSongBarnManager/compiled/main/UniversalSongBarnManager/: UniversalSongBarnManager.exe.manifest
UniversalSongBarnManager/lib/: __init__.pyo  tkinterroutines.py  tkinterroutines.pyo
UniversalSongBarnManager/lib/tkintertable/: Dialogs.pyo  Filtering.pyo  Plot.pyo  Prefs.py  Prefs.pyo  TableFormula.pyo  TableModels.pyo  Tables.pyo  Tables_IO.pyo  __init__.pyo
UniversalSongBarnManager/playground/: opencenter.py  spashscreen.py
UniversalSongBarnManager/tkintertable/: App.py  Tables.py
(+239 files in other folders)
