[project]
name = 'KrncUsbManager'
author = "Joe Stanley"
description = "KRNC Universal Song Barn (USB) Manager"
version = "0.0.0"
readme = "README.md"
python = "^3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Windows",
  "Operating System :: Linux"
]

[project.urls]
homepage = "https://github.com/engineerjoe440/KRNCApps/tree/master/UniversalSongBarnManager"
documentation = "https://github.com/engineerjoe440/KRNCApps/tree/master/UniversalSongBarnManager"
repository = "https://github.com/engineerjoe440/KRNCApps/tree/master/UniversalSongBarnManager"
